<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 Alwin Ibba
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollview_dialog_context_options"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/linearlayout_dialog_context_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/linearlayout_dialog_context_options_padding"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_dialog_context_options_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/label_dialog_context_options_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listview_dialog_context_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/listview_dialog_context_options_margin_top"
            android:layout_marginBottom="@dimen/listview_dialog_context_options_margin_bottom"
            android:layout_marginStart="@dimen/listview_dialog_context_options_margin_left"
            android:layout_marginEnd="@dimen/listview_dialog_context_options_margin_right"
            android:padding="@dimen/listview_dialog_context_options_padding"
            android:layout_gravity="fill_horizontal"
            android:scrollbars="none" />

        <ImageView
            android:id="@+id/imageview_dialog_context_options_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/label_dialog_context_options_cancel"
            app:srcCompat="@drawable/icon_cancel_selector" />
    </LinearLayout>
</ScrollView>