...
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="label_dialog_context_options_title">Text options</string>
    <string name="label_dialog_context_options_cancel">@android:string/cancel</string>
</resources>
