...
            android:layout_margin="@dimen/linearlayout_list_item_context_option_margin"
            android:padding="@dimen/linearlayout_list_item_context_option_padding"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textview_list_item_context_option_name"
                android:layout_width="@dimen/textview_list_item_context_option_name_width"
                android:layout_height="@dimen/textview_list_item_context_option_name_height"
                android:layout_margin="@dimen/textview_list_item_context_option_name_margin"
                android:padding="@dimen/textview_list_item_context_option_name_padding"
                android:gravity="center_horizontal"
                android:layout_weight="4"
...
